[package]
name = "pcsc-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cstr = "0.2"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = "1.0"
serde_derive = "1.0"
chrono = "0.4"
nom = "7.1"
pcsc = "2"
